# multi-agent-orchestrator-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
docs/: gitlab_access_protocol.md  notion_access_protocol.md
docs/project_profiles/: cpp.md  generic.md  rust.md
src/: constants.rs  errors.rs  fsm.rs  locks.rs  main.rs  report.rs  sessions.rs  signals.rs  state.rs  transport.rs  workflow.rs  yaml_check.rs
src/orchestrator/: mod.rs  monitor.rs  phases.rs
src/providers/: claude.rs  codex.rs  mod.rs  opencode.rs
