[package]
name = "orchestrate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrate"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["as_ref", "deref", "deref_mut", "from", "into"] }
fs2 = "0.4"
hex = "0.4"
nix = { version = "0.29", features = ["signal", "process"] }
procfs = "0.16"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
yaml-rust2 = "0.9"

[dev-dependencies]
tempfile = "3"
